--- a/OkaneFlow/Pages/Transactions/Edit.cshtml
+++ b/OkaneFlow/Pages/Transactions/Edit.cshtml
@@ -2,6 +2,8 @@
 @model OkaneFlow.Pages.Transactions.EditModel
 @{
     ViewData["Title"] = "Edit Transaction";
+    var prefs = ViewContext.HttpContext.Items["UserPreferences"] as UserPreferenceModel;
+    var currencySymbol = FormatHelper.FormatCurrency(0, prefs?.Currency ?? "EUR").Substring(0, 1);
 }
 
 <div class="container py-4">
@@ -26,7 +28,7 @@
                             <label asp-for="Transaction.Amount"
                                 class="form-label text-secondary small fw-bold text-uppercase">Amount</label>
                             <div class="input-group">
-                                <span class="input-group-text bg-light border-end-0">$</span>
+                                <span class="input-group-text bg-light border-end-0">@currencySymbol</span>
                                 <input asp-for="Transaction.Amount" class="form-control border-start-0 ps-0" />
                             </div>
                             <span asp-validation-for="Transaction.Amount" class="text-danger small"></span>
