--- a/OkaneFlow/Pages/_ViewImports.cshtml
+++ b/OkaneFlow/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using OkaneFlow
+@using OkaneFlow.Helpers
+@using Service.Models
 @namespace OkaneFlow.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
